@@ -24,6 +24,7 @@
 21. Disable context menu (long-press) for items on mobile devices.
 22. Dim screensaver text.
 23. Move screensaver text position to random location every 10 minutes.
+24. Add 'Remove duplicates' to queue 'Actions' menu.
 
 3.2.4
 -----
